# Scribe

./: .gitignore  Pipfile  README.md  pyproject.toml  requirements.txt  scribe.py  scribe_development.md  setup.py  test.yml  utils.py
scribe/: cli.py  scribe.py  utils.py
src/: scribe.py
