[tool.poetry]
name = "scribe"
version = "0.1.0"
description = "A helper for writing scientific papers"
authors = ["Henry Watkins <h.watkins@ucl.ac.uk>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
click = "^8.1.3"
PyYAML = "^6.0"

[tool.poetry.group.dev.dependencies]
black = "^22.12.0"
pytest = "^7.2.0"

[tool.poetry.scripts]
scribe = "scribe:cli"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
